infra/kubernetes/minimal/00-namespace.yaml
# ========================================
# Namespace
# ========================================
apiVersion: v1
kind: Namespace
metadata:
  name: fans
  labels:
    name: fans
    environment: production
